--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
 		"bc-console": "0.0.2",
 		"css-loader": "^6.5.1",
 		"error-overlay-webpack-plugin": "^1.0.0",
-		"eslint": "^8.4.0",
+		"eslint": "^8.37.0",
 		"eslint-plugin-react": "^7.27.1",
 		"eslint-webpack-plugin": "^3.1.1",
 		"file-loader": "^6.2.0",
@@ -57,6 +57,7 @@
 		]
 	},
 	"dependencies": {
+		"bootstrap": "^5.3.0-alpha2",
 		"prop-types": "^15.7.2",
 		"query-string": "^7.0.1",
 		"react": "^17.0.2",
